--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
             "value": "/"
         }
     },
-    "website": "https://github.com/zhenxi0106/guangyin/",
-    "repository": "https://github.com/zhenxi0106/guangyin",
+    "website": "https://github.com/zhixinxiaobai/vvv/",
+    "repository": "https://github.com/zhixinxiaobai/vvv",
     "stack": "container"
 }
